IJPL-194051 Eel tests: ensure that IjentNioFileSystemProvider is registered in every test (commit 2 of 2)
GitOrigin-RevId: 8517c7896d4e2eb6bb17acb56955bd41d31445d1